<resources>
    <string name="app_name">Tripso</string>
    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Me</string>
    <string name="tv_login_forget_password">Forget Password!</string>
    <string name="btn_login">Log In</string>
    <string name="haven_not_account">You haven\'t an Account ?!</string>
    <string name="sign_up">Sign Up</string>
    <string name="prompt_user_name">User Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="error_sign_up">There was an error in registration.</string>
    <string name="error_user_not_found">User with this email doesn\'t exist.</string>
    <string name="error_wrong_password">Your password is wrong.</string>
    <string name="error_sign_in">There was an error in login.</string>
    <string name="error_logout">An error occurred while log out, try again.</string>
    <string name="error_reset_password">Error in reset password</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="sign_up_with">Sign Up With</string>
    <string name="error_email_already_in_use">This email already used</string>
    <string name="prompt_phone">Phone</string>
    <string name="haven_account">You have an account</string>
    <string name="error_fill_all_fields">Please fill all fields.</string>
    <string name="error_email_badly_formatted">The email address is badly formatted.</string>
    <string name="error_invalid_password">Invalid Password</string>
    <string name="error_invalid_phone">Invalid Phone Number</string>
    <string name="add_trip_head">Add trip details</string>
    <string name="trip_name">Title</string>
    <string name="trip_from">Trip From</string>
    <string name="destination">Destination</string>
    <string name="date">Date</string>
    <string name="add_edit_trip">New Trip</string>
    <string name="save">Save</string>
    <string name="error_get_trips">Failed to retrieve trips</string>
    <string name="your_last_trips">Your LAst Trips</string>
    <string name="edit">Edit</string>
    <string name="app_lang">App Language</string>
    <string name="arabic">Arabic</string>
    <string name="english_rb">English</string>
    <string name="log_out">Log out</string>
    <string name="reset_pass">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="no_available_trips">No Available Trips</string>
    <string name="error_retrieve_data">An error occurred while retrieve data, try again.</string>
    <string name="your_next_trips">Your Next Trips</string>
    <string name="check_email">Check your email now</string>
    <string name="saved">Saved</string>
    <string name="trip_ready">Are you ready for your trip!</string>
    <string name="trip_to_end">What about ypur trip?!</string>
</resources>