<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data >
        <variable
            name="homeViewModel"
            type="com.example.tripso.ui.home.HomeViewModel" />
    </data>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.addEditTrip.AddEditTripFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_trip_head"
            android:textAlignment="center"
            android:layout_marginVertical="@dimen/horizontal_padding"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/trip_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_padding"
            android:layout_marginTop="@dimen/horizontal_padding"
            android:layout_marginEnd="@dimen/horizontal_padding"
            android:hint="@string/trip_name"
            android:text="@={homeViewModel.tripName}"
            android:selectAllOnFocus="true"
            />

        <EditText
            android:id="@+id/trip_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_padding"
            android:layout_marginTop="@dimen/horizontal_padding"
            android:layout_marginEnd="@dimen/horizontal_padding"
            android:hint="@string/trip_from"
            android:text="@={homeViewModel.tripFrom}"
            android:selectAllOnFocus="true"
            />

        <EditText
            android:id="@+id/trip_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_padding"
            android:layout_marginTop="@dimen/horizontal_padding"
            android:layout_marginEnd="@dimen/horizontal_padding"
            android:hint="@string/destination"
            android:text="@={homeViewModel.tripTo}"
            android:selectAllOnFocus="true"
            />

        <EditText
            android:id="@+id/trip_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_padding"
            android:layout_marginTop="@dimen/horizontal_padding"
            android:layout_marginEnd="@dimen/horizontal_padding"
            android:hint="@string/date"
            android:selectAllOnFocus="true"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save_trip"
            android:text="@string/save"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/horizontal_padding"
            android:onClick="@{() -> homeViewModel.saveTrip()}"
            android:backgroundTint="@color/teal_700"
            />
    </LinearLayout>

</FrameLayout>
</layout>