<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="settingsViewModel"
            type="com.example.tripso.ui.settings.SettingsViewModel" />
    </data>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/small_padding"
        android:layout_marginVertical="@dimen/medium_padding"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_lang"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/horizontal_padding"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radio_group"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/medium_padding">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english_rb"/>

                <RadioButton
                    android:id="@+id/arabic_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arabic"
                    android:layout_marginHorizontal="@dimen/horizontal_padding"
                    />
            </RadioGroup>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/horizontal_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_pass"
                android:id="@+id/reset_pass_txt"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/reset_pass_btn"
                tools:ignore="MissingConstraints" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:id="@+id/reset_pass_btn"
                android:backgroundTint="@color/teal_700"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/log_out_layout"
            android:layout_marginVertical="@dimen/horizontal_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:id="@+id/log_out_txt"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/log_out_btn"
                tools:ignore="MissingConstraints" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:id="@+id/log_out_btn"
                android:backgroundTint="@color/teal_700"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints"
                android:onClick="@{() -> settingsViewModel.logOut()}"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</FrameLayout>

</layout>