<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="loginViewModel"
            type="com.example.tripso.ui.login.LoginViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/login_photo"
        android:id="@+id/login_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_padding"
        android:layout_marginTop="@dimen/horizontal_padding"
        android:layout_marginEnd="@dimen/horizontal_padding"
        android:hint="@string/prompt_email"
        android:text="@={loginViewModel.userEmail}"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:background="@drawable/input_register"
        android:minHeight="60dp"
        android:paddingStart="@dimen/medium_padding"
        android:drawableStart="@drawable/ic_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_image" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_padding"
        android:layout_marginTop="@dimen/horizontal_padding"
        android:layout_marginEnd="@dimen/horizontal_padding"
        android:paddingStart="20dp"
        android:hint="@string/prompt_password"
        android:text="@={loginViewModel.userPassword}"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:background="@drawable/input_register"
        android:minHeight="60dp"
        android:drawableStart="@drawable/ic_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <TextView
        android:id="@+id/tv_login_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_padding"
        android:text="@string/tv_login_forget_password"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/horizontal_padding"
        android:layout_marginEnd="@dimen/horizontal_padding"
        android:layout_marginTop="@dimen/small_padding"
        android:text="@string/action_sign_in"
        android:background="@drawable/input_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_forget_password"
        app:layout_constraintVertical_bias="0.2"
        android:backgroundTint="@color/teal_700"/>

    <LinearLayout
        android:id="@+id/have_account_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_padding"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/login"
        app:layout_constraintStart_toStartOf="@id/login"
        app:layout_constraintTop_toBottomOf="@id/login">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/haven_not_account"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_login_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="@dimen/medium_padding"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/authentication_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_padding"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginStart="@dimen/medium_padding"
        app:layout_constraintEnd_toEndOf="@id/have_account_layout"
        app:layout_constraintStart_toStartOf="@id/have_account_layout"
        app:layout_constraintTop_toBottomOf="@id/have_account_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_with"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_google"
            android:background="@drawable/circle_shape"
            />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>