<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="loginViewModel"
            type="com.example.tripso.ui.login.LoginViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".ui.login.RegistrationFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/signup_photo"
        android:id="@+id/sign_up_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_padding"
        android:layout_marginEnd="@dimen/horizontal_padding"
        android:paddingStart="20dp"
        android:hint="@string/prompt_user_name"
        android:text="@={loginViewModel.userName}"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:background="@drawable/input_register"
        android:minHeight="60dp"
        android:drawableStart="@drawable/ic_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_image" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:layout_marginStart="@dimen/horizontal_padding"
        android:layout_marginEnd="@dimen/horizontal_padding"
        android:layout_marginTop="@dimen/horizontal_padding"
        android:hint="@string/prompt_email"
        android:text="@={loginViewModel.userEmail}"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:background="@drawable/input_register"
        android:minHeight="60dp"
        android:drawableStart="@drawable/ic_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userName" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:layout_marginStart="@dimen/horizontal_padding"
        android:layout_marginEnd="@dimen/horizontal_padding"
        android:layout_marginTop="@dimen/horizontal_padding"
        android:hint="@string/prompt_phone"
        android:text="@={loginViewModel.userPhone}"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:selectAllOnFocus="true"
        android:background="@drawable/input_register"
        android:minHeight="60dp"
        android:drawableStart="@drawable/ic_phone24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:layout_marginStart="@dimen/horizontal_padding"
        android:layout_marginEnd="@dimen/horizontal_padding"
        android:layout_marginTop="@dimen/horizontal_padding"
        android:hint="@string/prompt_password"
        android:text="@={loginViewModel.userPassword}"
        android:imeActionLabel="@string/action_sign_up"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:background="@drawable/input_register"
        android:minHeight="60dp"
        android:drawableStart="@drawable/ic_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <Button
        android:id="@+id/signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/horizontal_padding"
        android:layout_marginEnd="@dimen/horizontal_padding"
        android:layout_marginTop="@dimen/horizontal_padding"
        android:background="@drawable/input_register"
        android:text="@string/action_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.2" />

    <LinearLayout
        android:id="@+id/have_account_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_padding"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/signup"
        app:layout_constraintStart_toStartOf="@id/signup"
        app:layout_constraintTop_toBottomOf="@id/signup">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/haven_account"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_go_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="@dimen/medium_padding"/>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>